kochen part zwei

--- a/style.css
+++ b/style.css
@@ -1,93 +1,147 @@
 body {
-    margin: 0;
-    font-family: Helvetica, Arial, sans-serif;
+  margin: 0;
+  font-family: Helvetica, Arial, sans-serif;
 }
 
-header{
-    background-color: #fff;
-    height: 64px; display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-left: 1rem;
-    padding-right: 1rem;
+header {
+  background-color: #fff;
+  height: 64px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
-a{
-    color: #000;
-    text-decoration: none;
+a {
+  color: #000;
+  text-decoration: none;
 }
 
-ul{
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    text-transform: uppercase;
-    font-weight: bold;
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  text-transform: uppercase;
+  font-weight: bold;
 }
 
-#menu{
-    display: none;
+#menu {
+  display: none;
 }
-#menu.show{
-    display: block;
+#menu.show {
+  display: block;
 }
-#burger{
-    border:none; 
-    background-color: white;
-    cursor: pointer;
-}
-
-#intro{
-    background-image: url(img/intro.jpg);
-    background-position: center;
-    background-size: cover;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+#burger {
+  border: none;
+  background-color: white;
+  cursor: pointer;
 }
 
-.intro-text{
-    color: white;
-    text-align: center;
+#intro {
+  background-image: url(img/intro.jpg);
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.button{
-    background-color:#fff;
-    color: #375;
+.intro-text {
+  color: white;
+  text-align: center;
+}
+
+.button {
+  background-color: #fff;
+  color: #375;
+  padding: 1rem;
+  border-style: solid;
+  border-radius: 10px;
+  text-transform: uppercase;
+  font-weight: bold;
+  box-shadow: 0px 4px 6px 0px rgba(0, 0, 0, 0.5);
+  display: inline-block;
+  transition: 0.4s;
+
+  margin-top: 1rem;
+}
+.button:hover {
+  background-color: #375;
+  color: white;
+}
+
+.button-blue {
+  background-color: #375;
+  color: white;
+  display: block;
+  margin: 1rem;
+}
+
+.button-blue:hover {
+  background-color: white;
+  color: #375;
+}
+.card {
+  border: 1px solid lightgrey;
+  box-shadow: 0px 4px 6px 0px rgba(0, 0, 0, 0.5);
+  text-align: center;
+  margin: 1rem;
+  border-radius: 10px;
+  overflow: hidden;
+}
+.card img {
+  widows: 100%;
+}
+
+.card p {
+  margin: 1rem;
+}
+
+#rezepte h2 {
+  text-align: center;
+}
+
+#newsletter {
+      background-color: #04122b;
+      color: white;
+      text-align: center;
+      padding: 3rem; 1rem;
+      
+      
+
+  }
+input{
     padding: 1rem;
-    border-style: solid; 
-    border-radius:  10px;
-    text-transform: uppercase;
-    font-weight: bold;
-    box-shadow: 0px 4px 6px 0px rgba(0,0,0,0.5);
-    display: inline-block;
+    border-radius: 4px; 
+}
 
-    margin-top: 1rem;
-} 
- .card{
-     border: 1px solid lightgrey
-    box-shadow: 0px 4px 6px 0px rgba(0,0,0,0.5); 
-    text-align: center;
 
- }
- .card img{
-     widows: 100%;
- }
-@media (min-width: 800px){
-    #menu{
-        display: block; 
-    }
+@media (min-width: 800px) {
+  #menu {
+    display: block;
+  }
 
-    #burger{
-        display: none;
-    }
+  #burger {
+    display: none;
+  }
 
-    .unterpunkte{
-        display: flex;
-    }
+  .unterpunkte {
+    display: flex;
+  }
 
-    .unterpunkte li{
-        margin: 8px;
-    }
+  .unterpunkte li {
+    margin: 8px;
+  }
+
+  .row {
+    display: flex;
+  }
+#doc-footer{
+display: flex;
+justify-content: space-between;
+}
+
+  
 }
